compiler-cli/src/tests/snapshots/gleam__tests__echo__echo_function.snap
---
source: compiler-cli/src/tests/echo.rs
expression: output
---
--- main.gleam ----------------------
pub fn main() {
  echo fn(n) { n + 1 }
  echo private
}

fn private() {
  1
}


--- gleam run output ----------------
[90msrc/main.gleam:2[39m
//fn(a) { ... }
[90msrc/main.gleam:3[39m
//fn() { ... }
