compiler-cli/src/tests/snapshots/gleam__tests__echo__echo_tuple.snap
---
source: compiler-cli/src/tests/echo.rs
expression: output
---
--- main.gleam ----------------------
pub fn main() {
  echo #()
  echo #(True, 1, "hello")
}


--- gleam run output ----------------
[90msrc/main.gleam:2[39m
#()
[90msrc/main.gleam:3[39m
#(True, 1, "hello")
